verdin-imx8mp: enable mainline u-boot and kernel
With the distrooverride 'upstream' set override 'use-mainline-bsp' and
use the mainline u-boot and kernel recipes.

Related-to: ELB-4243
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -9,6 +9,7 @@ MACHINE_NAME = "Verdin-iMX8MP"
 MACHINEOVERRIDES =. "mx8:mx8m:mx8mp:"
 
 IMX_DEFAULT_BSP = "nxp"
+IMX_DEFAULT_BSP:upstream = "mainline"
 
 require conf/machine/include/imx-base.inc
 # override imx-base.inc which sets this to cortexa53-crypto
@@ -71,11 +72,15 @@ MACHINE_FEATURES += "3g bluetooth alsa ext2 pci screen touchscreen usbgadget usb
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
 PREFERRED_PROVIDER_virtual/kernel:preempt-rt = "linux-toradex"
-PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
-PREFERRED_PROVIDER_u-boot = "u-boot-toradex"
+PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp = "linux-toradex-mainline"
+PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp:preempt-rt = "linux-toradex-mainline"
+
+IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
 # Currently we use the nxp 2020.04 downstream for mx8 as some features are
 # not yet available in 2020.07.
 PREFERRED_VERSION_u-boot-toradex = "2020.04%"
+# With use-mainline-bsp build mainline U-Boot
+IMX_DEFAULT_BOOTLOADER:use-mainline-bsp = "u-boot"
 
 # handle machine firmware
 MACHINE_FIRMWARE:append = " linux-firmware-sd8997"
