firmware-imx-8: drop a Toradex specific fix
We dont have to install HDMI firmwares to firmware-imx-8 main package
any more, they are now already in firmware-imx-hdmi subpackage.

Related-to: ELB-3046

Signed-off-by: Ming Liu <ming.liu@toradex.com>

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -62,9 +62,7 @@ PREFERRED_PROVIDER_u-boot = "u-boot-toradex"
 # not yet available in 2020.07.
 PREFERRED_VERSION_u-boot-toradex = "2020.04%"
 
-MACHINE_FIRMWARE_append = " linux-firmware-pcie8997"
-MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx8"
-MACHINE_FIRMWARE_append = " firmware-imx-8"
+MACHINE_FIRMWARE_append = " linux-firmware-pcie8997 firmware-imx-hdmi firmware-imx-vpu-imx8"
 
 IMXBOOT_TARGETS = "flash_b0"
 
