firmware-imx-8: drop a Toradex specific fix
We dont have to install HDMI firmwares to firmware-imx-8 main package
any more, they are now already in firmware-imx-hdmi subpackage.

Related-to: ELB-3046

Signed-off-by: Ming Liu <ming.liu@toradex.com>
(cherry picked from commit 4e347e7ea7e615cc4eedaa6e25ad700fa2ed2bcc)

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -64,9 +64,7 @@ PREFERRED_PROVIDER_u-boot = "u-boot-toradex"
 # not yet available in 2020.07.
 PREFERRED_VERSION_u-boot-toradex = "2020.04%"
 
-MACHINE_FIRMWARE:append = " linux-firmware-pcie8997"
-MACHINE_FIRMWARE:append = " firmware-imx-vpu-imx8"
-MACHINE_FIRMWARE:append = " firmware-imx-8"
+MACHINE_FIRMWARE:append = " linux-firmware-pcie8997 firmware-imx-hdmi firmware-imx-vpu-imx8"
 
 IMXBOOT_TARGETS = "flash_b0"
 IMX_BOOT_SOC_TARGET = "iMX8QM"
