layer.conf: let backport recipes only valid for Toradex
We have some backport recipes let's keep them valid only for Toradex
distros.

Related-to: ELB-3046

Signed-off-by: Ming Liu <ming.liu@toradex.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -3,8 +3,10 @@ BBPATH .= ":${LAYERDIR}"
 
 # We have recipes-* directories, add to BBFILES
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb ${LAYERDIR}/recipes-*/*/*.bbappend"
-# Recipes which backport later versions of other layers are placed here
-BBFILES += "${LAYERDIR}/backports/recipes-*/*/*.bb ${LAYERDIR}/backports/recipes-*/*/*.bbappend"
+# Recipes which backport later versions of other layers are placed here.
+# Only valid for Toradex distributions.
+BACKPORT_BBFILES = "${LAYERDIR}/backports/recipes-*/*/*.bb ${LAYERDIR}/backports/recipes-*/*/*.bbappend"
+BBFILES += "${@ d.getVar('BACKPORT_BBFILES') if 'tdx' in d.getVar('DISTROOVERRIDES').split(':') else ''}"
 
 BBFILE_COLLECTIONS += "toradex-nxp-layer"
 BBFILE_PATTERN_toradex-nxp-layer = "^${LAYERDIR}/"
