layer: finish rework recipes to use soc familiy overrides
The <machine.conf> files need change too.
Follow meta-freescale commit 30f5ce1d ("Generalize overrides subsystem for
NXP and Mainline support").

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -12,7 +12,7 @@ IMX_DEFAULT_BSP = "nxp"
 
 require conf/machine/include/imx-base.inc
 # override imx-base.inc which sets this to cortexa53-crypto
-DEFAULTTUNE:mx8mm = "aarch64"
+DEFAULTTUNE:mx8mm-generic-bsp = "aarch64"
 require conf/machine/include/arm/armv8a/tune-cortexa53.inc
 
 # Don't include kernels in standard images
