--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -71,6 +71,7 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
 PREFERRED_PROVIDER_virtual/kernel:preempt-rt = "linux-toradex"
 PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp = "linux-toradex-mainline"
 PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp:preempt-rt = "linux-toradex-mainline"
+MACHINE_EXTRA_RRECOMMENDS:append:use-mainline-bsp = " modprobe-conf"
 
 IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
 # Currently we use the nxp 2020.04 downstream for mx8 as some features are
