machines: use armv8a-crypto as the default tune for arm64 machines
All our ARM 64 bit machines have the required features for armv8a-crypto
optimization. So build with that rather than with the more generic
aarch64.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -13,7 +13,7 @@ IMX_DEFAULT_BSP = "nxp"
 
 require conf/machine/include/imx-base.inc
 # override imx-base.inc which sets this to cortexa72-cortexa53-crypto
-DEFAULTTUNE:mx8qm-generic-bsp = "aarch64"
+DEFAULTTUNE:mx8qm-generic-bsp = "armv8a-crypto"
 require conf/machine/include/arm/armv8a/tune-cortexa72-cortexa53.inc
 
 # Don't include kernels in standard images
