--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -11,7 +11,7 @@ IMX_DEFAULT_BSP = "nxp"
 
 require conf/machine/include/imx-base.inc
 # if one wants cortexa35-crypto, set DEFAULTTUNE accordingly
-DEFAULTTUNE:mx8qxp-generic-bsp = "aarch64"
+DEFAULTTUNE:mx8qxp-generic-bsp = "armv8a-crypto"
 require conf/machine/include/arm/armv8a/tune-cortexa35.inc
 
 # Don't include kernels in standard images
