machine: apalis-imx8: add new 0067 8gb product
Signed-off-by: Philippe Schenker <philippe.schenker@toradex.com>
(cherry picked from commit da3b3020c9aeb378a2e90dc88e3fe20ca4821d05)

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -82,9 +82,10 @@ OFFSET_BOOTROM_PAYLOAD = "0"
 
 TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = "apalis-imx8_hdmi_overlay.dtbo"
 
-TORADEX_PRODUCT_IDS = "0037 0047 0048 0049"
+TORADEX_PRODUCT_IDS = "0037 0047 0048 0049 0067"
 TORADEX_PRODUCT_IDS[0037] = "imx8qm-apalis-v1.1-eval.dtb"
 TORADEX_PRODUCT_IDS[0047] = "imx8qm-apalis-v1.1-eval.dtb"
 TORADEX_PRODUCT_IDS[0048] = "imx8qp-apalis-v1.1-eval.dtb"
 TORADEX_PRODUCT_IDS[0049] = "imx8qp-apalis-v1.1-eval.dtb"
+TORADEX_PRODUCT_IDS[0067] = "imx8qm-apalis-v1.1-eval.dtb"
 
