--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -17,7 +17,7 @@ DEFAULTTUNE:mx8qm-generic-bsp = "armv8a-crypto"
 require conf/machine/include/arm/armv8a/tune-cortexa72-cortexa53.inc
 
 # Don't include kernels in standard images
-RDEPENDS:${KERNEL_PACKAGE_NAME}-base = ""
+RRECOMMENDS:${KERNEL_PACKAGE_NAME}-base = ""
 
 LOADADDR = ""
 
