--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -17,7 +17,7 @@ DEFAULTTUNE:mx8mm-generic-bsp = "armv8a-crypto"
 require conf/machine/include/arm/armv8a/tune-cortexa53.inc
 
 # Don't include kernels in standard images
-RDEPENDS:${KERNEL_PACKAGE_NAME}-base = ""
+RRECOMMENDS:${KERNEL_PACKAGE_NAME}-base = ""
 
 KERNEL_DEVICETREE = " \
     freescale/imx8mm-verdin-nonwifi-dahlia.dtb \
