machine: verdin-imx8mm: add new sku 0068
Add new Toradex SKU "0068 Verdin iMX8M Mini Quad 2GB WB IT".

This SKU is similar to "0055 Verdin iMX8M Mini Quad 2GB WB IT", but has
compared to 0055 no SPI-to-CAN transceiver placed.

Signed-off-by: Philippe Schenker <philippe.schenker@toradex.com>
(cherry picked from commit cef0c925da692e7db1c23ad9260f7475a48b12fe)

--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -101,8 +101,9 @@ OFFSET_BOOTROM_PAYLOAD = "2"
 TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = "verdin-imx8mm_lt8912_overlay.dtbo"
 TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT:use-mainline-bsp = ""
 
-TORADEX_PRODUCT_IDS = "0055 0057 0059 0060"
+TORADEX_PRODUCT_IDS = "0055 0057 0059 0060 0068"
 TORADEX_PRODUCT_IDS[0055] = "imx8mm-verdin-wifi-v1.1-dev.dtb"
 TORADEX_PRODUCT_IDS[0057] = "imx8mm-verdin-nonwifi-v1.1-dev.dtb"
 TORADEX_PRODUCT_IDS[0059] = "imx8mm-verdin-nonwifi-v1.1-dev.dtb"
 TORADEX_PRODUCT_IDS[0060] = "imx8mm-verdin-wifi-v1.1-dev.dtb"
+TORADEX_PRODUCT_IDS[0068] = "imx8mm-verdin-wifi-v1.1-dev.dtb"
