--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -63,9 +63,8 @@ PREFERRED_PROVIDER_virtual/dtb:use-mainline-bsp = "device-tree-overlays-mainline
 
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
 PREFERRED_PROVIDER_u-boot = "u-boot-toradex"
-# Currently we use the nxp 2020.04 downstream for mx8 as some features are
-# not yet available in 2020.07.
-PREFERRED_VERSION_u-boot-toradex = "2020.04%"
+# Currently we use the nxp 2022.04 downstream for mx8
+PREFERRED_VERSION_u-boot-toradex = "2022.04%"
 
 MACHINE_FIRMWARE:append = " linux-firmware-pcie8997"
 MACHINE_FIRMWARE:append = " firmware-imx-vpu-imx8"
