--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -74,9 +74,8 @@ PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp:preempt-rt = "linux-toradex-m
 MACHINE_EXTRA_RRECOMMENDS:append:use-mainline-bsp = " modprobe-conf"
 
 IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
-# Currently we use the nxp 2020.04 downstream for mx8 as some features are
-# not yet available in 2020.07.
-PREFERRED_VERSION_u-boot-toradex = "2020.04%"
+# Currently we use the nxp 2022.04 downstream for mx8
+PREFERRED_VERSION_u-boot-toradex = "2022.04%"
 # With use-mainline-bsp build mainline U-Boot
 IMX_DEFAULT_BOOTLOADER:use-mainline-bsp = "u-boot"
 # if using the mainline u-boot, build imx-boot from within u-boot
