verdin-imx8mm: verdin-imx8mp: follow changed dtb file name
After v2022.07 the device tree files were unified with the kernel
ones including using their file names.
Follow that if building with use-head-next override.

Related-to: ELB-4315
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -38,6 +38,7 @@ UBOOT_RD_LOADADDRESS = "0x60000000"
 
 # Set u-boot DTB
 UBOOT_DTB_NAME = "imx8mp-verdin.dtb"
+UBOOT_DTB_NAME:use-mainline-bsp:use-head-next = "imx8mp-verdin-wifi-dev.dtb"
 
 # Set DDR FIRMWARE
 LPDDR_FW_VERSION = "_202006"
