--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -43,6 +43,7 @@ ATF_PLATFORM = "imx8mm"
 
 # Set u-boot DTB
 UBOOT_DTB_NAME = "imx8mm-verdin.dtb"
+UBOOT_DTB_NAME:use-mainline-bsp:use-head-next = "imx8mm-verdin-wifi-dev.dtb"
 
 BOOT_SPACE = "65536"
 
