--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -25,16 +25,18 @@ LOADADDR = ""
 # auto-serial-console there
 USE_VT = "0"
 
-KERNEL_DEVICETREE = " \
-    freescale/imx8qm-apalis-eval.dtb \
-    freescale/imx8qm-apalis-ixora-v1.1.dtb \
-    freescale/imx8qm-apalis-v1.1-eval.dtb \
-    freescale/imx8qm-apalis-v1.1-ixora-v1.1.dtb \
-    freescale/imx8qm-apalis-v1.1-ixora-v1.2.dtb \
-    freescale/imx8qp-apalis-v1.1-eval.dtb \
-    freescale/imx8qp-apalis-v1.1-ixora-v1.1.dtb	\
-    freescale/imx8qp-apalis-v1.1-ixora-v1.2.dtb \
-"
+#KERNEL_DEVICETREE = " \
+#    freescale/imx8qm-apalis-eval.dtb \
+#    freescale/imx8qm-apalis-ixora-v1.1.dtb \
+#    freescale/imx8qm-apalis-v1.1-eval.dtb \
+#    freescale/imx8qm-apalis-v1.1-ixora-v1.1.dtb \
+#    freescale/imx8qm-apalis-v1.1-ixora-v1.2.dtb \
+#    freescale/imx8qp-apalis-v1.1-eval.dtb \
+#    freescale/imx8qp-apalis-v1.1-ixora-v1.1.dtb	\
+#    freescale/imx8qp-apalis-v1.1-ixora-v1.2.dtb \
+#"
+# Use a building device-tree until we have ported our device-trees to 5.15 kernel
+KERNEL_DEVICETREE = ""
 
 KERNEL_IMAGETYPE:aarch64 = "Image.gz"
 
