--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -80,7 +80,7 @@ IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
 # Currently we use the nxp 2022.04 downstream for mx8
 PREFERRED_VERSION_u-boot-toradex = "2022.04%"
 # With use-mainline-bsp build mainline U-Boot
-IMX_DEFAULT_BOOTLOADER:use-mainline-bsp = "u-boot"
+PREFERRED_VERSION_u-boot-toradex:use-mainline-bsp = "2022.07%"
 # if using the mainline u-boot, build imx-boot from within u-boot
 MACHINEOVERRIDES:prepend:use-mainline-bsp = "imx-boot-container:"
 # variables to control imx-boot with u-boot
