machine: verdin-imx8mm: verdin-imx8mp: restructure
Restructure machine configuration files slightly to ease future
maintenance. Just cosmetic, no functional change at all.

Signed-off-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>

--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -31,18 +31,23 @@ UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "verdin-imx8mm_defconfig,sdcard"
 SPL_BINARY = "spl/u-boot-spl.bin"
 
-UBOOT_ENTRYPOINT_mx8mm  = "0x40000000"
 UBOOT_DTB_LOADADDRESS_mx8mm = "0x44000000"
 UBOOT_DTBO_LOADADDRESS_mx8mm = "0x46000000"
+UBOOT_ENTRYPOINT_mx8mm  = "0x40000000"
 UBOOT_RD_LOADADDRESS = "0x60000000"
-
-# Set DDR FIRMWARE
-DDR_FIRMWARE_NAME = "lpddr4_pmu_train_1d_imem.bin lpddr4_pmu_train_1d_dmem.bin lpddr4_pmu_train_2d_imem.bin lpddr4_pmu_train_2d_dmem.bin"
-
-ATF_PLATFORM = "imx8mm"
 
 # Set u-boot DTB
 UBOOT_DTB_NAME = "imx8mm-verdin.dtb"
+
+# Set DDR FIRMWARE
+DDR_FIRMWARE_NAME = " \
+    lpddr4_pmu_train_1d_imem.bin \
+    lpddr4_pmu_train_1d_dmem.bin \
+    lpddr4_pmu_train_2d_imem.bin \
+    lpddr4_pmu_train_2d_dmem.bin \
+"
+
+ATF_PLATFORM = "imx8mm"
 
 BOOT_SPACE = "65536"
 
@@ -63,10 +68,6 @@ SERIAL_CONSOLES = "115200;ttymxc0"
 
 MACHINE_FEATURES += "3g bluetooth alsa ext2 pci screen touchscreen usbgadget usbhost vfat wifi"
 
-
-# Add additional firmware
-MACHINE_FIRMWARE:append = " linux-firmware-ath10k linux-firmware-imx-sdma-imx7d"
-
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
 PREFERRED_PROVIDER_virtual/kernel:preempt-rt = "linux-toradex"
 PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp = "linux-toradex-mainline"
@@ -77,6 +78,8 @@ IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
 # Currently we use the nxp 2022.04 downstream for mx8
 PREFERRED_VERSION_u-boot-toradex = "2022.04%"
 
+# handle machine firmware
+MACHINE_FIRMWARE:append = " linux-firmware-ath10k linux-firmware-imx-sdma-imx7d"
 MACHINE_FIRMWARE:append = " linux-firmware-sd8997"
 MACHINE_FIRMWARE:append = " firmware-imx-vpu-imx8"
 
@@ -88,7 +91,6 @@ IMAGE_FSTYPES += "teziimg"
 UBOOT_BINARY_TEZI_EMMC = "imx-boot"
 OFFSET_BOOTROM_PAYLOAD = "2"
 
-# test
 TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = "verdin-imx8mm_lt8912_overlay.dtbo verdin-imx8mm_spidev_overlay.dtbo"
 TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT:use-mainline-bsp = "verdin-imx8mm_spidev_overlay.dtbo"
 
