colibri-imx6ull-emmc/verdin-imx8mm/verdin-imx8mp/imx-boot: fix overrides
Turns out that somehow we still have some old override syntax stuff
laying around!

Signed-off-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>
(cherry picked from commit 70bc6c6d11a0d1c693fa63bdcbcafee8cd793bdf)

--- a/conf/machine/colibri-imx6ull-emmc.conf
+++ b/conf/machine/colibri-imx6ull-emmc.conf
@@ -28,7 +28,7 @@ KERNEL_DEVICETREE:use-nxp-bsp = " \
 
 KERNEL_IMAGETYPE = "zImage"
 # The kernel lives in its own ubi volume.
-RRECOMMENDS_${KERNEL_PACKAGE_NAME}-base = ""
+RRECOMMENDS:${KERNEL_PACKAGE_NAME}-base = ""
 
 IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
 PREFERRED_PROVIDER_u-boot-default-script ?= "u-boot-script-toradex"
