--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -31,9 +31,9 @@ UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "verdin-imx8mm_defconfig,sdcard"
 SPL_BINARY = "spl/u-boot-spl.bin"
 
-UBOOT_DTB_LOADADDRESS_mx8mm = "0x50200000"
-UBOOT_DTBO_LOADADDRESS_mx8mm = "0x50240000"
-UBOOT_ENTRYPOINT_mx8mm  = "0x48200000"
+UBOOT_DTB_LOADADDRESS:mx8mm-generic-bsp = "0x50200000"
+UBOOT_DTBO_LOADADDRESS:mx8mm-generic-bsp = "0x50240000"
+UBOOT_ENTRYPOINT:mx8mm-generic-bsp  = "0x48200000"
 UBOOT_RD_LOADADDRESS = "0x50300000"
 
 # Set u-boot DTB
