machines: verdin-imx8mm: deploy yavia device tree
Deploy Yavia Carrier Board device tree files.

Related-to: ELB-4861
Signed-off-by: Francesco Dolcini <francesco.dolcini@toradex.com>

--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -21,8 +21,10 @@ RDEPENDS_${KERNEL_PACKAGE_NAME}-base = ""
 KERNEL_DEVICETREE = " \
     freescale/imx8mm-verdin-nonwifi-dahlia.dtb \
     freescale/imx8mm-verdin-nonwifi-dev.dtb \
+    freescale/imx8mm-verdin-nonwifi-yavia.dtb \
     freescale/imx8mm-verdin-wifi-dahlia.dtb \
     freescale/imx8mm-verdin-wifi-dev.dtb \
+    freescale/imx8mm-verdin-wifi-yavia.dtb \
 "
 KERNEL_IMAGETYPE_aarch64 = "Image.gz"
 
