--- a/recipes-kernel/linux/linux-toradex-5.15-2.0.x/preempt-rt.cfg
+++ b/recipes-kernel/linux/linux-toradex-5.15-2.0.x/preempt-rt.cfg
@@ -1,4 +1,5 @@
 CONFIG_EXPERT=y
+# CONFIG_KVM is not set
 # CONFIG_PREEMPT_NONE is not set
 # CONFIG_PREEMPT_VOLUNTARY is not set
 # CONFIG_PREEMPT is not set
