machine: verdin-imx8m*: Move AT-F boot UART configuration to machine conf
Add SOC_ATF_BOOT_UART_BASE in relevant machine conf instead of having
IMX_BOOT_UART_BASE added to EXTRA_OEMAKE in imx_atf_%bbappend, this
change remove the dependency on our .bbappend to have a working ATF binary.

SOC_ATF_BOOT_UART_BASE variable support was introduce in commit
453def7956c8 ("imx-atf: allow setting the UART used during boot")
in meta-freescale.

Related-to: ELB-4889
Signed-off-by: Emanuele Ghidoli <emanuele.ghidoli@toradex.com>

--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -48,6 +48,7 @@ DDR_FIRMWARE_NAME = " \
 "
 
 ATF_PLATFORM = "imx8mm"
+SOC_ATF_BOOT_UART_BASE:verdin-imx8mm = "0x30860000"
 
 BOOT_SPACE = "65536"
 
