--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -49,6 +49,7 @@ DDR_FIRMWARE_NAME = " \
 "
 
 ATF_PLATFORM = "imx8mp"
+SOC_ATF_BOOT_UART_BASE:verdin-imx8mp = "0x30880000"
 
 BOOT_SPACE = "65536"
 IMAGE_BOOTLOADER = "imx-boot"
