machine: apalis-imx8: apply spidev device-tree overlays
Add the spidev overlays to overlays.txt so that they get applied
out of the box.

Related-to: ELB-4894
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -79,7 +79,11 @@ IMAGE_FSTYPES += "teziimg"
 UBOOT_BINARY_TEZI_EMMC = "imx-boot"
 OFFSET_BOOTROM_PAYLOAD = "0"
 
-TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = "apalis-imx8_hdmi_overlay.dtbo"
+TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = " \
+    apalis-imx8_hdmi_overlay.dtbo \
+    apalis-imx8_spi1_spidev_overlay.dtbo \
+    apalis-imx8_spi2_spidev_overlay.dtbo \
+"
 
 TORADEX_PRODUCT_IDS = "0037 0047 0048 0049 0067"
 TORADEX_PRODUCT_IDS[0037] = "imx8qm-apalis-v1.1-eval.dtb"
