layer.conf: Update to mickledore
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -26,4 +26,4 @@ LAYERDEPENDS_toradex-nxp-layer = " \
     freescale-3rdparty \
     toradex-bsp-common-layer \
 "
-LAYERSERIES_COMPAT_toradex-nxp-layer = "kirkstone langdale"
+LAYERSERIES_COMPAT_toradex-nxp-layer = "langdale mickledore"
