machine: verdin-imx8mp: include nxp89xx firmware
Currently the nxp89xx firmware is being included at the image level
(i.e. when Toradex BSP users build a Toradex reference image).

Because of this, custom images that are not based on the Toradex
reference image don't get the nxp89xx firmware, and WiFi doesn't work.

Fix that by including the firmware as a RRECOMMENDS package for the
machine.

Obs.: This change affects only images that are based on
packagegroup-base, which does not include for example the
core-image-minimal.

Signed-off-by: Sergio Prado <sergio.prado@toradex.com>
(cherry picked from commit c18aa339e5cbb915f40411fca744e8717feab1a4)

--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -92,7 +92,7 @@ TEE_LOAD_ADDR = "0xbe000000"
 UBOOT_MAKE_TARGET:use-mainline-bsp = "all"
 
 # handle machine firmware
-MACHINE_FIRMWARE:append = " linux-firmware-sd8997"
+MACHINE_FIRMWARE:append = " linux-firmware-sd8997 linux-firmware-nxp89xx"
 MACHINE_FIRMWARE:remove = "firmware-sof-imx"
 
 IMAGE_CLASSES:append = " image_type_tezi"
