--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -22,8 +22,10 @@ RRECOMMENDS:${KERNEL_PACKAGE_NAME}-base = ""
 KERNEL_DEVICETREE = " \
     freescale/imx8mm-verdin-nonwifi-dahlia.dtb \
     freescale/imx8mm-verdin-nonwifi-dev.dtb \
+    freescale/imx8mm-verdin-nonwifi-yavia.dtb \
     freescale/imx8mm-verdin-wifi-dahlia.dtb \
     freescale/imx8mm-verdin-wifi-dev.dtb \
+    freescale/imx8mm-verdin-wifi-yavia.dtb \
 "
 KERNEL_IMAGETYPE:aarch64 = "Image.gz"
 
