--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -63,7 +63,7 @@ PREFERRED_PROVIDER_u-boot = "u-boot-toradex"
 # Currently we use the nxp 2022.04 downstream for mx8
 PREFERRED_VERSION_u-boot-toradex = "2022.04%"
 
-MACHINE_FIRMWARE:append = " linux-firmware-pcie8997 firmware-imx-hdmi firmware-imx-vpu-imx8"
+MACHINE_FIRMWARE:append = " linux-firmware-pcie8997 firmware-imx-hdmi"
 
 IMXBOOT_TARGETS = "flash_b0"
 IMX_BOOT_SOC_TARGET = "iMX8QM"
