--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -23,17 +23,16 @@ LOADADDR = ""
 # auto-serial-console there
 USE_VT = "0"
 
-#KERNEL_DEVICETREE = " \
-#    freescale/imx8dx-colibri-aster.dtb \
-#    freescale/imx8dx-colibri-eval-v3.dtb \
-#    freescale/imx8dx-colibri-iris.dtb \
-#    freescale/imx8dx-colibri-iris-v2.dtb \
-#    freescale/imx8qxp-colibri-aster.dtb \
-#    freescale/imx8qxp-colibri-eval-v3.dtb \
-#    freescale/imx8qxp-colibri-iris.dtb \
-#    freescale/imx8qxp-colibri-iris-v2.dtb \
-#"
-KERNEL_DEVICETREE = "freescale/imx8qxp-colibri-eval-v3.dtb"
+KERNEL_DEVICETREE = " \
+    freescale/imx8dx-colibri-aster.dtb \
+    freescale/imx8dx-colibri-eval-v3.dtb \
+    freescale/imx8dx-colibri-iris.dtb \
+    freescale/imx8dx-colibri-iris-v2.dtb \
+    freescale/imx8qxp-colibri-aster.dtb \
+    freescale/imx8qxp-colibri-eval-v3.dtb \
+    freescale/imx8qxp-colibri-iris.dtb \
+    freescale/imx8qxp-colibri-iris-v2.dtb \
+"
 KERNEL_DEVICETREE:use-mainline-bsp = "freescale/imx8qxp-colibri-eval-v3.dtb"
 
 KERNEL_IMAGETYPE:aarch64 = "Image.gz"
