machine: colibri-imx8x: fix default overlays name
Pick proper default overlays when building for downstream due to
changed overlay naming scheme.

Related-to: ELB-4754

Signed-off-by: Emanuele Ghidoli <emanuele.ghidoli@toradex.com>

--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -82,7 +82,7 @@ IMAGE_FSTYPES += "teziimg"
 UBOOT_BINARY_TEZI_EMMC = "imx-boot"
 OFFSET_BOOTROM_PAYLOAD = "0"
 
-TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = "colibri-imx8x_parallel-rgb_overlay.dtbo colibri-imx8x_ad7879_overlay.dtbo display-vga_overlay.dtbo"
+TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = "colibri-imx8x_vga-640x480_overlay.dtbo"
 
 TORADEX_PRODUCT_IDS = "0038 0050 0051 0052"
 TORADEX_PRODUCT_IDS[0038] = "imx8qxp-colibri-eval-v3.dtb"
