machine: apalis-imx8: Build U-Boot/Kernel mainline for upstream distro
Change to build an upstream U-Boot and Linux kernel when using the
upstream distro rather than using the NXP fork.

Related-to: ELB-5670
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
Signed-off-by: Hiago De Franco <hiago.franco@toradex.com>

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -41,6 +41,15 @@ KERNEL_DEVICETREE = " \
     ${KERNEL_DTB_PREFIX}imx8qp-apalis-v1.1-ixora-v1.1.dtb	\
     ${KERNEL_DTB_PREFIX}imx8qp-apalis-v1.1-ixora-v1.2.dtb \
 "
+KERNEL_DEVICETREE:use-mainline-bsp = " \
+    ${KERNEL_DTB_PREFIX}imx8qm-apalis-eval-v1.2.dtb \
+    ${KERNEL_DTB_PREFIX}imx8qm-apalis-eval.dtb \
+    ${KERNEL_DTB_PREFIX}imx8qm-apalis-ixora-v1.1.dtb \
+    ${KERNEL_DTB_PREFIX}imx8qm-apalis-v1.1-eval-v1.2.dtb \
+    ${KERNEL_DTB_PREFIX}imx8qm-apalis-v1.1-eval.dtb \
+    ${KERNEL_DTB_PREFIX}imx8qm-apalis-v1.1-ixora-v1.1.dtb \
+    ${KERNEL_DTB_PREFIX}imx8qm-apalis-v1.1-ixora-v1.2.dtb \
+"
 
 KERNEL_IMAGETYPE:mx8-generic-bsp = "Image.gz"
 
@@ -64,11 +73,16 @@ PREFERRED_PROVIDER_u-boot-default-script = "u-boot-distro-boot"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
 PREFERRED_PROVIDER_virtual/kernel:preempt-rt = "linux-toradex"
+PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp = "linux-toradex-upstream"
+PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp:preempt-rt = "linux-toradex-upstream-rt"
 PREFERRED_VERSION_linux-imx-headers = "5.15"
-PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
-PREFERRED_PROVIDER_u-boot = "u-boot-toradex"
+
+IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
 # Currently we use the nxp 2022.04 downstream for mx8
 PREFERRED_VERSION_u-boot-toradex = "2022.04%"
+PREFERRED_VERSION_u-boot-toradex:use-mainline-bsp = "2022.07%"
+UBOOT_MAKE_TARGET:use-mainline-bsp = "all"
+UBOOT_DTB_NAME:use-mainline-bsp:use-head-next = "fsl-imx8qm-apalis.dts"
 
 MACHINE_FIRMWARE:append = " linux-firmware-pcie8997 firmware-imx-hdmi"
 
@@ -91,6 +105,7 @@ TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = " \
     apalis-imx8_spi1_spidev_overlay.dtbo \
     apalis-imx8_spi2_spidev_overlay.dtbo \
 "
+TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT:use-mainline-bsp = ""
 
 TORADEX_PRODUCT_IDS = "0037 0047 0048 0049 0067"
 TORADEX_PRODUCT_IDS[0037] = "imx8qm-apalis-v1.1-eval.dtb"
