machine: colibri-imx8: Build U-Boot/Kernel mainline for upstream distro
Change to build an upstream U-Boot and Linux kernel when using the
upstream distro rather than using the NXP fork.

Related-to: ELB-5669
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
Signed-off-by: Hiago De Franco <hiago.franco@toradex.com>

--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -36,7 +36,12 @@ KERNEL_DEVICETREE = " \
     ${KERNEL_DTB_PREFIX}imx8qxp-colibri-iris.dtb \
     ${KERNEL_DTB_PREFIX}imx8qxp-colibri-iris-v2.dtb \
 "
-KERNEL_DEVICETREE:use-mainline-bsp = "${KERNEL_DTB_PREFIX}imx8qxp-colibri-eval-v3.dtb"
+KERNEL_DEVICETREE:use-mainline-bsp = " \
+    ${KERNEL_DTB_PREFIX}imx8qxp-colibri-aster.dtb \
+    ${KERNEL_DTB_PREFIX}imx8qxp-colibri-eval-v3.dtb \
+    ${KERNEL_DTB_PREFIX}imx8qxp-colibri-iris-v2.dtb \
+    ${KERNEL_DTB_PREFIX}imx8qxp-colibri-iris.dtb \
+"
 
 KERNEL_IMAGETYPE:mx8-generic-bsp = "Image.gz"
 
@@ -65,10 +70,12 @@ PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp:preempt-rt = "linux-toradex-u
 PREFERRED_PROVIDER_virtual/dtb:use-mainline-bsp = "device-tree-overlays-mainline"
 PREFERRED_VERSION_linux-imx-headers = "5.15"
 
-PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
-PREFERRED_PROVIDER_u-boot = "u-boot-toradex"
+IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
 # Currently we use the nxp 2022.04 downstream for mx8
 PREFERRED_VERSION_u-boot-toradex = "2022.04%"
+PREFERRED_VERSION_u-boot-toradex:use-mainline-bsp = "2022.07%"
+UBOOT_MAKE_TARGET:use-mainline-bsp = "all"
+UBOOT_DTB_NAME:use-mainline-bsp:use-head-next = "fsl-imx8qxp-colibri.dts"
 
 MACHINE_FIRMWARE:append = " linux-firmware-pcie8997"
 
@@ -87,6 +94,7 @@ UBOOT_BINARY_TEZI_EMMC = "imx-boot"
 OFFSET_BOOTROM_PAYLOAD = "0"
 
 TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = "colibri-imx8x_vga-640x480_overlay.dtbo"
+TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT:use-mainline-bsp = ""
 
 TORADEX_PRODUCT_IDS = "0038 0050 0051 0052"
 TORADEX_PRODUCT_IDS[0038] = "imx8qxp-colibri-eval-v3.dtb"
