--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -104,9 +104,11 @@ OFFSET_BOOTROM_PAYLOAD = "0"
 TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = "verdin-imx8mp_hdmi_overlay.dtbo verdin-imx8mp_dsi-to-hdmi_overlay.dtbo verdin-imx8mp_spidev_overlay.dtbo"
 TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT:use-mainline-bsp = "verdin-imx8mp_spidev_overlay.dtbo"
 
-TORADEX_PRODUCT_IDS = "0058 0061 0063 0064 0066"
+TORADEX_PRODUCT_IDS = "0058 0061 0063 0064 0065 0066 0070"
 TORADEX_PRODUCT_IDS[0058] = "imx8mp-verdin-wifi-dev.dtb"
 TORADEX_PRODUCT_IDS[0061] = "imx8mp-verdin-nonwifi-dev.dtb"
 TORADEX_PRODUCT_IDS[0063] = "imx8mp-verdin-nonwifi-dev.dtb"
 TORADEX_PRODUCT_IDS[0064] = "imx8mp-verdin-wifi-dev.dtb"
+TORADEX_PRODUCT_IDS[0065] = "imx8mp-verdin-nonwifi-dev.dtb"
 TORADEX_PRODUCT_IDS[0066] = "imx8mp-verdin-wifi-dev.dtb"
+TORADEX_PRODUCT_IDS[0070] = "imx8mp-verdin-wifi-dev.dtb"
