machines: arch arm: follow change to vendor subdir for dtbs
With moving to kernel 6.5 the kernel commit 724ba67515320 ("ARM: dts:
Move .dts files to vendor sub-directories") introduced a regression
with our 32 bit machines.
We have to add the relative path to the dts/dtb files in our list
of device trees to be built per machine if the distro/kernel flavour
is building a 6.5 and later kernel.

Reassign the full list in the <MACHINE.inc> file to KERNEL_DEVICETREE,
so that we can conditionally add the relative path for a 6.5 kernel.

Related-to: ELB-5263
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/colibri-imx6ull-emmc.conf
+++ b/conf/machine/colibri-imx6ull-emmc.conf
@@ -16,14 +16,15 @@ PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp = "linux-toradex-mainline"
 PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp:preempt-rt = "linux-toradex-mainline-rt"
 PREFERRED_PROVIDER_virtual/dtb:use-mainline-bsp = "device-tree-overlays-mainline"
 
-KERNEL_DEVICETREE:use-mainline-bsp = " \
-    imx6ull-colibri-emmc-eval-v3.dtb \
-"
-KERNEL_DEVICETREE:use-nxp-bsp = " \
-    imx6ull-colibri-emmc-aster.dtb \
-    imx6ull-colibri-emmc-eval-v3.dtb \
-    imx6ull-colibri-emmc-iris.dtb \
-    imx6ull-colibri-emmc-iris-v2.dtb \
+# with kernel 6.5 the device trees were moved to vendor subdirs
+KERNEL_DTB_PREFIX = "nxp/imx/"
+KERNEL_DTB_PREFIX:preempt-rt = ""
+KERNEL_DTB_PREFIX:use-nxp-bsp = ""
+KERNEL_DEVICETREE = " \
+    ${KERNEL_DTB_PREFIX}imx6ull-colibri-emmc-aster.dtb \
+    ${KERNEL_DTB_PREFIX}imx6ull-colibri-emmc-eval-v3.dtb \
+    ${KERNEL_DTB_PREFIX}imx6ull-colibri-emmc-iris.dtb \
+    ${KERNEL_DTB_PREFIX}imx6ull-colibri-emmc-iris-v2.dtb \
 "
 
 KERNEL_IMAGETYPE = "zImage"
