machines: arch arm64: use var to set relative path to dtb
Follow the pattern used in commit ce9a5ef ("machines: arch arm: follow
change to vendor subdir for dtbs")
Set the variable KERNEL_DTB_PREFIX with the relative path to the device
tree source files and then use it. This variable can then be used
in the creation of the u-boot-distro-boot script.

Related-to: ELB-5263
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -19,13 +19,14 @@ require conf/machine/include/arm/armv8a/tune-cortexa53.inc
 # Don't include kernels in standard images
 RRECOMMENDS:${KERNEL_PACKAGE_NAME}-base = ""
 
+KERNEL_DTB_PREFIX = "freescale/"
 KERNEL_DEVICETREE = " \
-    freescale/imx8mp-verdin-nonwifi-dahlia.dtb \
-    freescale/imx8mp-verdin-nonwifi-dev.dtb \
-    freescale/imx8mp-verdin-nonwifi-yavia.dtb \
-    freescale/imx8mp-verdin-wifi-dahlia.dtb \
-    freescale/imx8mp-verdin-wifi-dev.dtb \
-    freescale/imx8mp-verdin-wifi-yavia.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mp-verdin-nonwifi-dahlia.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mp-verdin-nonwifi-dev.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mp-verdin-nonwifi-yavia.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-dahlia.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-dev.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-yavia.dtb \
 "
 KERNEL_IMAGETYPE:aarch64 = "Image.gz"
 
