--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -23,17 +23,18 @@ LOADADDR = ""
 # auto-serial-console there
 USE_VT = "0"
 
+KERNEL_DTB_PREFIX = "freescale/"
 KERNEL_DEVICETREE = " \
-    freescale/imx8dx-colibri-aster.dtb \
-    freescale/imx8dx-colibri-eval-v3.dtb \
-    freescale/imx8dx-colibri-iris.dtb \
-    freescale/imx8dx-colibri-iris-v2.dtb \
-    freescale/imx8qxp-colibri-aster.dtb \
-    freescale/imx8qxp-colibri-eval-v3.dtb \
-    freescale/imx8qxp-colibri-iris.dtb \
-    freescale/imx8qxp-colibri-iris-v2.dtb \
+    ${KERNEL_DTB_PREFIX}imx8dx-colibri-aster.dtb \
+    ${KERNEL_DTB_PREFIX}imx8dx-colibri-eval-v3.dtb \
+    ${KERNEL_DTB_PREFIX}imx8dx-colibri-iris.dtb \
+    ${KERNEL_DTB_PREFIX}imx8dx-colibri-iris-v2.dtb \
+    ${KERNEL_DTB_PREFIX}imx8qxp-colibri-aster.dtb \
+    ${KERNEL_DTB_PREFIX}imx8qxp-colibri-eval-v3.dtb \
+    ${KERNEL_DTB_PREFIX}imx8qxp-colibri-iris.dtb \
+    ${KERNEL_DTB_PREFIX}imx8qxp-colibri-iris-v2.dtb \
 "
-KERNEL_DEVICETREE:use-mainline-bsp = "freescale/imx8qxp-colibri-eval-v3.dtb"
+KERNEL_DEVICETREE:use-mainline-bsp = "${KERNEL_DTB_PREFIX}imx8qxp-colibri-eval-v3.dtb"
 
 KERNEL_IMAGETYPE:aarch64 = "Image.gz"
 
