--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -27,15 +27,16 @@ LOADADDR = ""
 # auto-serial-console there
 USE_VT = "0"
 
+KERNEL_DTB_PREFIX = "freescale/"
 KERNEL_DEVICETREE = " \
-    freescale/imx8qm-apalis-eval.dtb \
-    freescale/imx8qm-apalis-ixora-v1.1.dtb \
-    freescale/imx8qm-apalis-v1.1-eval.dtb \
-    freescale/imx8qm-apalis-v1.1-ixora-v1.1.dtb \
-    freescale/imx8qm-apalis-v1.1-ixora-v1.2.dtb \
-    freescale/imx8qp-apalis-v1.1-eval.dtb \
-    freescale/imx8qp-apalis-v1.1-ixora-v1.1.dtb	\
-    freescale/imx8qp-apalis-v1.1-ixora-v1.2.dtb \
+    ${KERNEL_DTB_PREFIX}imx8qm-apalis-eval.dtb \
+    ${KERNEL_DTB_PREFIX}imx8qm-apalis-ixora-v1.1.dtb \
+    ${KERNEL_DTB_PREFIX}imx8qm-apalis-v1.1-eval.dtb \
+    ${KERNEL_DTB_PREFIX}imx8qm-apalis-v1.1-ixora-v1.1.dtb \
+    ${KERNEL_DTB_PREFIX}imx8qm-apalis-v1.1-ixora-v1.2.dtb \
+    ${KERNEL_DTB_PREFIX}imx8qp-apalis-v1.1-eval.dtb \
+    ${KERNEL_DTB_PREFIX}imx8qp-apalis-v1.1-ixora-v1.1.dtb	\
+    ${KERNEL_DTB_PREFIX}imx8qp-apalis-v1.1-ixora-v1.2.dtb \
 "
 
 KERNEL_IMAGETYPE:aarch64 = "Image.gz"
