--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -84,7 +84,7 @@ IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
 # Currently we use the nxp 2022.04 downstream for mx8
 PREFERRED_VERSION_u-boot-toradex = "2022.04%"
 # With use-mainline-bsp build mainline U-Boot
-PREFERRED_VERSION_u-boot-toradex:use-mainline-bsp = "2022.07%"
+PREFERRED_VERSION_u-boot-toradex:use-mainline-bsp = "mainline"
 # variables to control imx-boot with u-boot
 ATF_LOAD_ADDR = "0x920000"
 IMX_EXTRA_FIRMWARE = "firmware-imx-8m"
