machine: verdin-imx8mp: load dsi to hdmi overlay also on upstream
Load the DSI to HDMI overlay (verdin-imx8mp_dsi-to-hdmi_overlay.dtbo)
also on upstream by default.

Signed-off-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>

--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -104,7 +104,7 @@ UBOOT_BINARY_TEZI_EMMC = "imx-boot"
 OFFSET_BOOTROM_PAYLOAD = "0"
 
 TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT = "verdin-imx8mp_hdmi_overlay.dtbo verdin-imx8mp_dsi-to-hdmi_overlay.dtbo verdin-imx8mp_spidev_overlay.dtbo"
-TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT:use-mainline-bsp = "verdin-imx8mp_spidev_overlay.dtbo"
+TEZI_EXTERNAL_KERNEL_DEVICETREE_BOOT:use-mainline-bsp = "verdin-imx8mp_dsi-to-hdmi_overlay.dtbo verdin-imx8mp_spidev_overlay.dtbo"
 
 TORADEX_PRODUCT_IDS = "0058 0061 0063 0064 0065 0066 0070"
 TORADEX_PRODUCT_IDS[0058] = "imx8mp-verdin-wifi-dev.dtb"
