machines: follow upstream linux recipe changes
The upstream Linux recipe in meta-toradex-bsp-common was split into
a pinned (currently to 6.5.5) and a mainline recipe building current
HEAD of the master branch.
For a OE master branch we always use the latest development version.

Related-to: ELB-5359
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/colibri-imx6ull-emmc.conf
+++ b/conf/machine/colibri-imx6ull-emmc.conf
@@ -12,8 +12,8 @@ require conf/machine/include/arm/armv7a/tune-cortexa7.inc
 PREFERRED_PROVIDER_virtual/kernel:use-nxp-bsp ?= "linux-toradex"
 PREFERRED_PROVIDER_virtual/kernel:preempt-rt = "linux-toradex"
 
-PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp = "linux-toradex-mainline"
-PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp:preempt-rt = "linux-toradex-mainline-rt"
+PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp = "linux-toradex-upstream"
+PREFERRED_PROVIDER_virtual/kernel:use-mainline-bsp:preempt-rt = "linux-toradex-upstream-rt"
 PREFERRED_PROVIDER_virtual/dtb:use-mainline-bsp = "device-tree-overlays-mainline"
 
 # with kernel 6.5 the device trees were moved to vendor subdirs
