machines: add mwifiexconf to all machines featuring wifi
Add mwifiexconf to all machines (optionally) featuring Wi-Fi.

Signed-off-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>
(cherry picked from commit 88aa268d1698747e6ecb9531022858351da861b0)

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -9,6 +9,8 @@ SOC_SILICON_REV ?= ""
 
 MACHINEOVERRIDES =. "mx8:mx8qm:"
 
+MACHINE_EXTRA_RRECOMMENDS:append = " mwifiexconf"
+
 IMX_DEFAULT_BSP = "nxp"
 
 require conf/machine/include/imx-base.inc
