--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -7,6 +7,8 @@ MACHINE_NAME = "Colibri-iMX8X"
 
 MACHINEOVERRIDES =. "mx8:mx8x:mx8qxp:"
 
+MACHINE_EXTRA_RRECOMMENDS:append = " mwifiexconf"
+
 IMX_DEFAULT_BSP = "nxp"
 
 require conf/machine/include/imx-base.inc
