--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -8,6 +8,8 @@ MACHINE_NAME = "Verdin-iMX8MM"
 
 MACHINEOVERRIDES =. "mx8:mx8m:mx8mm:"
 
+MACHINE_EXTRA_RRECOMMENDS:append = " mwifiexconf"
+
 IMX_DEFAULT_BSP = "nxp"
 IMX_DEFAULT_BSP:upstream = "mainline"
 
