--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -8,6 +8,8 @@ MACHINE_NAME = "Verdin-iMX8MP"
 
 MACHINEOVERRIDES =. "mx8:mx8m:mx8mp:"
 
+MACHINE_EXTRA_RRECOMMENDS:append = " mwifiexconf"
+
 IMX_DEFAULT_BSP = "nxp"
 IMX_DEFAULT_BSP:upstream = "mainline"
 
