--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -25,9 +25,11 @@ KERNEL_DTB_PREFIX = "freescale/"
 KERNEL_DEVICETREE = " \
     ${KERNEL_DTB_PREFIX}imx8mp-verdin-nonwifi-dahlia.dtb \
     ${KERNEL_DTB_PREFIX}imx8mp-verdin-nonwifi-dev.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mp-verdin-nonwifi-mallow.dtb \
     ${KERNEL_DTB_PREFIX}imx8mp-verdin-nonwifi-yavia.dtb \
     ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-dahlia.dtb \
     ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-dev.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-mallow.dtb \
     ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-yavia.dtb \
 "
 KERNEL_IMAGETYPE:aarch64 = "Image.gz"
