machine: verdin-imx8mm: add mallow device tree
Add Mallow device tree to verdin imx8mm machine configuration.

Related-to: ELB-5216

Signed-off-by: Joao Paulo Goncalves <joao.goncalves@toradex.com>

--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -25,9 +25,11 @@ KERNEL_DTB_PREFIX = "freescale/"
 KERNEL_DEVICETREE = " \
     ${KERNEL_DTB_PREFIX}imx8mm-verdin-nonwifi-dahlia.dtb \
     ${KERNEL_DTB_PREFIX}imx8mm-verdin-nonwifi-dev.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mm-verdin-nonwifi-mallow.dtb \
     ${KERNEL_DTB_PREFIX}imx8mm-verdin-nonwifi-yavia.dtb \
     ${KERNEL_DTB_PREFIX}imx8mm-verdin-wifi-dahlia.dtb \
     ${KERNEL_DTB_PREFIX}imx8mm-verdin-wifi-dev.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mm-verdin-wifi-mallow.dtb \
     ${KERNEL_DTB_PREFIX}imx8mm-verdin-wifi-yavia.dtb \
 "
 KERNEL_IMAGETYPE:aarch64 = "Image.gz"
