--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -32,6 +32,14 @@ KERNEL_DEVICETREE = " \
     ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-mallow.dtb \
     ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-yavia.dtb \
 "
+KERNEL_DEVICETREE:use-mainline-bsp = " \
+    ${KERNEL_DTB_PREFIX}imx8mp-verdin-nonwifi-dahlia.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mp-verdin-nonwifi-dev.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mp-verdin-nonwifi-yavia.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-dahlia.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-dev.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-yavia.dtb \
+"
 KERNEL_IMAGETYPE:aarch64 = "Image.gz"
 
 UBOOT_CONFIG ??= "sd"
