mx8: machines: fix kernel imagetype
meta-freescale commit 1652e927 ("imx-base.inc: fix KERNEL_IMAGETYPE's
override") changed to set KERNEL_IMAGETYPE with an override of higher
priority than aarch64. Follow that so that we get Image.gz kernel
images again.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -39,7 +39,7 @@ KERNEL_DEVICETREE = " \
     ${KERNEL_DTB_PREFIX}imx8qp-apalis-v1.1-ixora-v1.2.dtb \
 "
 
-KERNEL_IMAGETYPE:aarch64 = "Image.gz"
+KERNEL_IMAGETYPE:mx8-generic-bsp = "Image.gz"
 
 UBOOT_SUFFIX = "bin"
 UBOOT_CONFIG ??= "sd"
