--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -38,7 +38,7 @@ KERNEL_DEVICETREE = " \
 "
 KERNEL_DEVICETREE:use-mainline-bsp = "${KERNEL_DTB_PREFIX}imx8qxp-colibri-eval-v3.dtb"
 
-KERNEL_IMAGETYPE:aarch64 = "Image.gz"
+KERNEL_IMAGETYPE:mx8-generic-bsp = "Image.gz"
 
 UBOOT_SUFFIX = "bin"
 UBOOT_CONFIG ??= "sd"
