--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -40,7 +40,7 @@ KERNEL_DEVICETREE:use-mainline-bsp = " \
     ${KERNEL_DTB_PREFIX}imx8mm-verdin-wifi-dev.dtb \
     ${KERNEL_DTB_PREFIX}imx8mm-verdin-wifi-yavia.dtb \
 "
-KERNEL_IMAGETYPE:aarch64 = "Image.gz"
+KERNEL_IMAGETYPE:mx8-generic-bsp = "Image.gz"
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "verdin-imx8mm_defconfig,sdcard"
