--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -30,11 +30,14 @@ USE_VT = "0"
 KERNEL_DTB_PREFIX = "freescale/"
 KERNEL_DEVICETREE = " \
     ${KERNEL_DTB_PREFIX}imx8qm-apalis-eval.dtb \
+    ${KERNEL_DTB_PREFIX}imx8qm-apalis-eval-v1.2.dtb \
     ${KERNEL_DTB_PREFIX}imx8qm-apalis-ixora-v1.1.dtb \
     ${KERNEL_DTB_PREFIX}imx8qm-apalis-v1.1-eval.dtb \
+    ${KERNEL_DTB_PREFIX}imx8qm-apalis-v1.1-eval-v1.2.dtb \
     ${KERNEL_DTB_PREFIX}imx8qm-apalis-v1.1-ixora-v1.1.dtb \
     ${KERNEL_DTB_PREFIX}imx8qm-apalis-v1.1-ixora-v1.2.dtb \
     ${KERNEL_DTB_PREFIX}imx8qp-apalis-v1.1-eval.dtb \
+    ${KERNEL_DTB_PREFIX}imx8qp-apalis-v1.1-eval-v1.2.dtb \
     ${KERNEL_DTB_PREFIX}imx8qp-apalis-v1.1-ixora-v1.1.dtb	\
     ${KERNEL_DTB_PREFIX}imx8qp-apalis-v1.1-ixora-v1.2.dtb \
 "
