--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -27,11 +27,14 @@ USE_VT = "0"
 
 KERNEL_DEVICETREE = " \
     freescale/imx8qm-apalis-eval.dtb \
+    freescale/imx8qm-apalis-eval-v1.2.dtb \
     freescale/imx8qm-apalis-ixora-v1.1.dtb \
     freescale/imx8qm-apalis-v1.1-eval.dtb \
+    freescale/imx8qm-apalis-v1.1-eval-v1.2.dtb \
     freescale/imx8qm-apalis-v1.1-ixora-v1.1.dtb \
     freescale/imx8qm-apalis-v1.1-ixora-v1.2.dtb \
     freescale/imx8qp-apalis-v1.1-eval.dtb \
+    freescale/imx8qp-apalis-v1.1-eval-v1.2.dtb \
     freescale/imx8qp-apalis-v1.1-ixora-v1.1.dtb	\
     freescale/imx8qp-apalis-v1.1-ixora-v1.2.dtb \
 "
