layer.conf: Update for the scarthgap release series
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -26,4 +26,4 @@ LAYERDEPENDS_toradex-nxp-layer = " \
     freescale-3rdparty \
     toradex-bsp-common-layer \
 "
-LAYERSERIES_COMPAT_toradex-nxp-layer = "mickledore nanbield"
+LAYERSERIES_COMPAT_toradex-nxp-layer = "nanbield scarthgap"
