--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -53,7 +53,7 @@ UBOOT_RD_LOADADDRESS = "0x52300000"
 
 # Set u-boot DTB
 UBOOT_DTB_NAME = "imx8mm-verdin.dtb"
-UBOOT_DTB_NAME:use-mainline-bsp:use-head-next = "imx8mm-verdin-wifi-dev.dtb"
+UBOOT_DTB_NAME:use-mainline-bsp = "imx8mm-verdin-wifi-dev.dtb"
 
 # Set DDR FIRMWARE
 DDR_FIRMWARE_NAME = " \
