--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -73,7 +73,7 @@ PREFERRED_VERSION_linux-imx-headers = "5.15"
 IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
 # Currently we use the nxp 2022.04 downstream for mx8
 PREFERRED_VERSION_u-boot-toradex = "2022.04%"
-PREFERRED_VERSION_u-boot-toradex:use-mainline-bsp = "2022.07%"
+PREFERRED_VERSION_u-boot-toradex:use-mainline-bsp = "mainline"
 UBOOT_MAKE_TARGET:use-mainline-bsp = "all"
 UBOOT_DTB_NAME:use-mainline-bsp:use-head-next = "fsl-imx8qxp-colibri.dts"
 
