machines: change u-boot default version
Change the default U-boot version to latest mainline for:
* apalis-imx6
* colibri-imx6, colibri-imx6ull and colibri-imx6ull-emmc
* colibri-imx7 and colibri-imx7-emmc

Change the default U-boot version to latest mainline for:
* apalis-imx8, upstream distro, downstream distro with use-head-next
* colibri-imx8x, upstream distro, downstream distro with use-head-next
* verdin-imx8mm, upstream distro, downstream distro with use-head-next
* verdin-imx8mp, upstream distro, downstream distro with use-head-next

Change the default U-boot version to 2024.07 for:
* apalis-imx8, downstream distro
* colibri-imx8x, downstream distro
* verdin-imx8mm, downstream distro
* verdin-imx8mp, downstream distro

Adapted from scarthgap-7.x.y commit c426a9ef5bd6 ("machines: change
u-boot default version to upstream v2024.07")

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -65,8 +65,9 @@ PREFERRED_PROVIDER_virtual/dtb:use-mainline-bsp = "device-tree-overlays-mainline
 PREFERRED_VERSION_linux-imx-headers = "5.15"
 
 IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
-# Currently we use the nxp 2024.04 downstream for mx8
-PREFERRED_VERSION_u-boot-toradex = "2024.04%"
+PREFERRED_VERSION_u-boot-toradex = "2024.07%"
+# With mainline distro and/or use-head-next build mainline U-Boot
+PREFERRED_VERSION_u-boot-toradex:use-head-next = "mainline"
 PREFERRED_VERSION_u-boot-toradex:use-mainline-bsp = "mainline"
 UBOOT_MAKE_TARGET:use-mainline-bsp = "all"
 UBOOT_DTB_NAME:use-mainline-bsp:use-head-next = "fsl-imx8qxp-colibri.dts"
