--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -93,9 +93,9 @@ PREFERRED_PROVIDER_virtual/dtb:use-mainline-bsp = "device-tree-overlays-mainline
 PREFERRED_VERSION_linux-imx-headers = "6.6"
 
 IMX_DEFAULT_BOOTLOADER = "u-boot-toradex"
-# Currently we use the nxp 2022.04 downstream for mx8
-PREFERRED_VERSION_u-boot-toradex = "2022.04%"
-# With use-mainline-bsp build mainline U-Boot
+PREFERRED_VERSION_u-boot-toradex = "2024.07%"
+# With mainline distro and/or use-head-next build mainline U-Boot
+PREFERRED_VERSION_u-boot-toradex:use-head-next = "mainline"
 PREFERRED_VERSION_u-boot-toradex:use-mainline-bsp = "mainline"
 # variables to control imx-boot with u-boot
 ATF_LOAD_ADDR = "0x920000"
