verdin-imx8mm: update default u-boot dtb name
Now that we are using mainline U-Boot 2024.07 regardless of the chosen
BSP (mainline or NXP), set the U-Boot DTB name to the one used in
mainline U-Boot.

Signed-off-by: Rogerio Guerra Borin <rogerio.borin@toradex.com>

--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -52,8 +52,7 @@ UBOOT_ENTRYPOINT:mx8mm-generic-bsp  = "0x48200000"
 UBOOT_RD_LOADADDRESS = "0x52300000"
 
 # Set u-boot DTB
-UBOOT_DTB_NAME = "imx8mm-verdin.dtb"
-UBOOT_DTB_NAME:use-mainline-bsp = "imx8mm-verdin-wifi-dev.dtb"
+UBOOT_DTB_NAME = "imx8mm-verdin-wifi-dev.dtb"
 
 # Set DDR FIRMWARE
 DDR_FIRMWARE_NAME = " \
