machine: verdin-imx8mp: add Ivy device tree
Add Ivy carrier board device tree to BSP7 for Verdin-iMX8MP.

Related-to: ELB-5763
Signed-off-by: João Paulo Gonçalves <joao.goncalves@toradex.com>
(cherry picked from commit e70180312f51127b938e69aa78886655f0fd11f8)

--- a/conf/machine/verdin-imx8mp.conf
+++ b/conf/machine/verdin-imx8mp.conf
@@ -25,10 +25,12 @@ KERNEL_DTB_PREFIX = "freescale/"
 KERNEL_DEVICETREE = " \
     ${KERNEL_DTB_PREFIX}imx8mp-verdin-nonwifi-dahlia.dtb \
     ${KERNEL_DTB_PREFIX}imx8mp-verdin-nonwifi-dev.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mp-verdin-nonwifi-ivy.dtb \
     ${KERNEL_DTB_PREFIX}imx8mp-verdin-nonwifi-mallow.dtb \
     ${KERNEL_DTB_PREFIX}imx8mp-verdin-nonwifi-yavia.dtb \
     ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-dahlia.dtb \
     ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-dev.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-ivy.dtb \
     ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-mallow.dtb \
     ${KERNEL_DTB_PREFIX}imx8mp-verdin-wifi-yavia.dtb \
 "
