alsa-state: apalis-imx8: Update sound card name
The sound card name was changed from apalis-imx8qm-sgtl5000 to
apalis-imx8qm, update the state and conf files accordingly.

Related-to: ELB-5930
Signed-off-by: Francesco Dolcini <francesco.dolcini@toradex.com>

--- a/recipes-bsp/alsa-state/alsa-state/apalis-imx8/asound.conf
+++ b/recipes-bsp/alsa-state/alsa-state/apalis-imx8/asound.conf
@@ -2,7 +2,7 @@ defaults.pcm.rate_converter "linear"
 
 pcm.default_card{
 type hw
-card "apalisimx8qmsgt"
+card "apalisimx8qm"
 }
 
 pcm.dmix_48000{
@@ -240,11 +240,11 @@ slave.pcm "asymed"
 
 ctl.!default{
 type hw
-card "apalisimx8qmsgt"
+card "apalisimx8qm"
 }
 
 ctl.mixer0{
 type hw
-card "apalisimx8qmsgt"
+card "apalisimx8qm"
 }
 
