--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -25,19 +25,23 @@ KERNEL_DTB_PREFIX = "freescale/"
 KERNEL_DEVICETREE = " \
     ${KERNEL_DTB_PREFIX}imx8mm-verdin-nonwifi-dahlia.dtb \
     ${KERNEL_DTB_PREFIX}imx8mm-verdin-nonwifi-dev.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mm-verdin-nonwifi-ivy.dtb \
     ${KERNEL_DTB_PREFIX}imx8mm-verdin-nonwifi-mallow.dtb \
     ${KERNEL_DTB_PREFIX}imx8mm-verdin-nonwifi-yavia.dtb \
     ${KERNEL_DTB_PREFIX}imx8mm-verdin-wifi-dahlia.dtb \
     ${KERNEL_DTB_PREFIX}imx8mm-verdin-wifi-dev.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mm-verdin-wifi-ivy.dtb \
     ${KERNEL_DTB_PREFIX}imx8mm-verdin-wifi-mallow.dtb \
     ${KERNEL_DTB_PREFIX}imx8mm-verdin-wifi-yavia.dtb \
 "
 KERNEL_DEVICETREE:use-mainline-bsp = " \
     ${KERNEL_DTB_PREFIX}imx8mm-verdin-nonwifi-dahlia.dtb \
     ${KERNEL_DTB_PREFIX}imx8mm-verdin-nonwifi-dev.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mm-verdin-nonwifi-ivy.dtb \
     ${KERNEL_DTB_PREFIX}imx8mm-verdin-nonwifi-yavia.dtb \
     ${KERNEL_DTB_PREFIX}imx8mm-verdin-wifi-dahlia.dtb \
     ${KERNEL_DTB_PREFIX}imx8mm-verdin-wifi-dev.dtb \
+    ${KERNEL_DTB_PREFIX}imx8mm-verdin-wifi-ivy.dtb \
     ${KERNEL_DTB_PREFIX}imx8mm-verdin-wifi-yavia.dtb \
 "
 KERNEL_IMAGETYPE:mx8-generic-bsp = "Image.gz"
